--- a/resume/style.css
+++ b/resume/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 #header {
-  background-image: url('/resume/images/background.jpg');
+  background-image: url('images/background.jpg');
   background-position: center top;
   background-repeat: no-repeat;
   background-size: cover;
